--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -27,7 +27,7 @@
             android:id="@+id/choose_area_fragment"
             android:name="cn.zhengweiyi.weiyiweather.ChooseAreaFragement"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></fragment>
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
