--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -17,7 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="@color/colorTextColor"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:text="@string/app_name"/>
 
         <Button
             android:id="@+id/back_button"
@@ -25,6 +26,7 @@
             android:layout_height="25dp"
             android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/ic_back"/>
     </RelativeLayout>
 
