--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:textColor="@color/colorTextColor"
             android:textSize="20sp"
-            android:text="@string/app_name"/>
+            android:text="中国"/>
 
         <Button
             android:id="@+id/back_button"
