--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -18,14 +18,14 @@
             android:layout_centerInParent="true"
             android:textColor="@color/colorTextColor"
             android:textSize="20sp"
-            android:text="中国"/>
+            android:text="@string/China"/>
 
         <Button
             android:id="@+id/back_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentLeft="true"
+            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_back"/>
     </RelativeLayout>
@@ -33,7 +33,7 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
